# 42_computor_v1

./: .gitignore  CMakeLists.txt  Makefile  Makefile.xt  Number.h  README.md  author  build.sh  build_debug.sh  build_release.sh  clean.sh  computor  config.sh  config_debug.sh  config_release.sh  readme  run_tests.sh  run_tests_debug.sh  run_tests_release.sh  tst
computor/: CMakeLists.txt  computor.cpp  computor.h  parser.cpp  solver.cpp
computor/include/: computor.h
headers/: computor.h  rational.number.class.hpp  token.hpp
lib/: CMakeLists.txt
lib/math/: CMakeLists.txt  abs_overflow.cpp  doubleToRatio.cpp  getGcd.cpp  greatestCommonDivisor.cpp  llFactorGcd.cpp  math_helpers.cpp  math_helpers.h  pow_overflow.cpp
lib/math/include/: math_helpers.h
lib/math/tests/: CMakeLists.txt  tests.cpp
lib/numerical_classes/: CMakeLists.txt  Complex.cpp  Complex.h  Fraction.cpp  Imaginary.cpp  Number.cpp  Numerical.cpp  Radical.cpp  Rational.cpp  Rational.h  Real.cpp  Root.cpp  SquareRoot.cpp
lib/numerical_classes/include/: Complex.h  Fraction.h  Imaginary.h  Number.h  Numerical.h  Radical  Radical.h  Rational.h  Real.h  Root.h  SquareRoot.h  Types.h
lib/polynomials/: CMakeLists.txt  Equation.cpp  EquationParser.cpp  ParseToken.cpp  Solution.cpp  Token.cpp
lib/polynomials/include/: Equation.h  EquationParser.h  ParseToken.h  Solution.h  Token.h
lib/tests/math/: CMakeLists.txt  tests.cpp
lib/tests/numerical_classes/: CMakeLists.txt  rationals.cpp  roots.cpp
lib/tests/polynomials/: parser.cpp
src/: computor.cpp  doubleToReal.cpp  parser.cpp  rational.number.class.cpp  token.cpp
src/classes/: CMakeLists.txt  Complex.cpp  Equation.cpp  Rational.cpp  Token.cpp  Tokens.cpp
src/classes/headers/: Complex.hpp  Equation.h  Equation.hpp  Rational.h  Rational.hpp  Token.h  Token.hpp  Tokens.hpp
src/computor/: computor.cpp  parser.cpp  solver.cpp
src/computor/headers/: computor.h
src/headers/: computor.h
src/math/: CMakeLists.txt  doubleToRational.cpp  greatestCommonDivisor.cpp
src/math/headers/: math_helpers.h  math_helpers.hpp
src/templates/headers/: Token.hpp
src/tests/: computor_tests.cpp
tests/: CMakeLists.txt  computor_tests.cpp
tests/computor/: CMakeLists.txt  solutions.cpp
tests/lib/: CMakeLists.txt
tests/lib/math/: CMakeLists.txt  tests.cpp
tests/lib/numerical_classes/: CMakeLists.txt  numericals.cpp  rationals.cpp  roots.cpp
tests/lib/polynomials/: CMakeLists.txt  parser.cpp  solutions.cpp
